tests/files/flow_controller_tests/should_run/001.cmdr
//Test simple variable assignment with ints
x = 3;
y = x;
print x;
print y;